--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <div>
-    <h3>Git gives us future!</h3>
+    <h3>Git gives us a better future!</h3>
+    <p>Practice makes us perfect.</p>
   </div>
 </body>
 </html>
