--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div>
     <h3>Git gives us a better future!</h3>
     <p>Practice makes us perfect.</p>
+    <p>git commit --amend</p>
   </div>
 </body>
 </html>
