--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Practice makes us perfect.</p>
     <p>git commit --amend</p>
     <p>git merge</p>
+    <p>conflict</p>
   </div>
 </body>
 </html>
