--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h3>Git gives us a better future!</h3>
     <p>Practice makes us perfect.</p>
     <p>git commit --amend</p>
+    <p>conflict happended</p>
   </div>
 </body>
 </html>
